[package]
name = "sutra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "now"] }
clap = "4.5.23"
comrak = { git = "https://github.com/fominok/comrak", branch = "disable-escape" }
crossterm = "0.29.0"
derive_builder = "0.20.2"
env_logger = "0.11.8"
glob = "0.3.1"
itertools = "0.14.0"
log = "0.4.22"
nom = "8.0.0"
ratatui = "0.29.0"
shellexpand = "3.1.1"
typed-path = "0.11.0"

[dev-dependencies]
faux = "0.1.12"
tempfile = "3.20.0"
